# Phonetisaurus

./: .gitignore  CMakeLists.txt
example/: cmudict.formatted.dict  path.sh  run.sh  test.wlist
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  util.cc
